<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:contentDescription="selectCar"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/copyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:alpha="0"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/white"
        android:text="@string/copy"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/shareBtn"
        app:layout_constraintEnd_toEndOf="@+id/historyBtn"
        app:layout_constraintStart_toEndOf="@+id/shareBtn" />

    <Button
        android:id="@+id/parkBtn"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:background="@drawable/simple_car"
        android:contentDescription="@string/park_your_car"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <Button
        android:id="@+id/navigateBtn"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        android:background="@drawable/navigate"
        android:clickable="false"
        android:contentDescription="@string/navigate_to_your_car"
        app:layout_constraintBaseline_toBaselineOf="@+id/parkBtn"
        app:layout_constraintEnd_toStartOf="@+id/getLocationBtn" />

    <Button
        android:id="@+id/getLocationBtn"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:alpha="0"
        android:background="@drawable/location"
        android:clickable="false"
        android:contentDescription="@string/locate_your_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/navigateBtn" />

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:background="@drawable/round_button"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/historyBtn"
        app:layout_constraintTop_toBottomOf="@+id/historyBtn" />

    <Button
        android:id="@+id/startTimeBtn"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="32dp"
        android:alpha="0"
        android:background="@android:drawable/ic_lock_idle_alarm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <TextView
        android:id="@+id/navigateL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="Navigate to vehicle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/navigateBtn"
        app:layout_constraintStart_toStartOf="@+id/navigateBtn"
        app:layout_constraintTop_toBottomOf="@+id/navigateBtn" />

    <TextView
        android:id="@+id/navigateL2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="Navigate to vehicle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/navigateBtn"
        app:layout_constraintStart_toStartOf="@+id/navigateBtn"
        app:layout_constraintTop_toBottomOf="@+id/navigateBtn" />

    <TextView
        android:id="@+id/resetL"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="Repark"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/resetLocationBtn"
        app:layout_constraintTop_toBottomOf="@+id/resetLocationBtn" />

    <TextView
        android:id="@+id/locateL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="Locate vehicle"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/navigateL"
        app:layout_constraintEnd_toEndOf="@+id/getLocationBtn"
        app:layout_constraintStart_toStartOf="@+id/getLocationBtn" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:alpha="0"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/loadingL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:text="Getting coordinates"
        android:textColor="@color/darkBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <Chronometer
        android:id="@+id/parkTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:alpha="0"
        android:ems="10"
        android:inputType=""
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/parkBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/locationET"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        android:background="@null"
        android:ems="10"
        android:inputType=""
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chronometerL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resetLocationBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:alpha="0"
        android:background="@drawable/reset"
        android:clickable="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/navigateBtn"
        app:layout_constraintStart_toEndOf="@+id/progressBar" />

    <Button
        android:id="@+id/saveLocationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/long_round_button"
        android:text="Save Location"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parkBtn" />

    <Button
        android:id="@+id/historyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/long_round_button"
        android:text="History"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveLocationBtn" />

    <TextView
        android:id="@+id/chronometerL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-16dp"
        android:text="Time elapsed:"
        android:textColor="@color/darkBlue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/parkTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/currentLocationL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Currently parked:"
        android:textColor="@color/darkBlue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/locationET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/selectVehicleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription='"Select"'
        android:text="no vehicle"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/saveLocationBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vehicleL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change vehicle"

        android:textColor="@color/darkBlue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/selectVehicleBtn"
        app:layout_constraintStart_toStartOf="@+id/selectVehicleBtn"
        app:layout_constraintTop_toBottomOf="@+id/selectVehicleBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>